--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,9 +1,11 @@
-#indexTop{
+body{
   text-align: center;
   font-weight: bold;
   background-color: green;
   color: white;
 }
+
+
 td{
   border:1px solid black;
   padding:20px;
