--- a/public/css/fotboll.css
+++ b/public/css/fotboll.css
@@ -1,5 +1,17 @@
 body{
-  background-color: black;
+  background-color: green;
   color: white;
   font-family: Arial, Helvetica, sans-serif;
 }
+
+#header{
+  position: relative;
+  text-align: center ;
+}
+
+td{
+  justify-content: center;
+  position: relative;
+  border:1px solid white;
+  padding:20px;
+  }
